<resources>
    <string name="app_name">Final Project</string>

    <string name="startCarDB">START CAR DATABASE</string>

    <!--    Main page-->
    <string name="triviaStartBtn">TRIVIA GAME</string>
    <string name="songsterStartBtn">SONGSTER SEARCH</string>
    <string name="carDBStartBtn">CAR DATABASE</string>
    <string name="soccerStartBtn">SOCCER GAME</string>
    <string name="projectInfo">CST2335 Final Project</string>
    <string name="teamInfo">© 2021 TECH SAVVY TEAM</string>

    <!--    menu and navigation-->
    <string name="carDatabaseActivityTitle">Car Database</string>
    <string name="carDatabaseActivityAuthor">Sophie Sun</string>
    <string name="carDatabaseActivityVersionNumber">carDatabaseActivityVersionNumber</string>


    <!--    Trivia game launch page-->
    <string name="trivia_launch_title">CHOOSE QUESTIONS:</string>
    <string name="questions_number_label">Number of Questions:</string>
    <string name="difficulty_label">Select Difficulty:</string>
    <string name="question_type_label">Select Type:</string>
    <string-array name="difficulty_array">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string-array name="question_type_array">
        <item>Any Type</item>
        <item>Multiple Choice</item>
        <item>True/False</item>
    </string-array>
    <string name="triviaTimerSwitch">Timer Switch</string>
    <string name="trivia_switch_on_message">Timer switch is on now.</string>
    <string name="trivia_switch_off_message">Timer switch is off now.</string>
    <string name="undo_text">UNDO</string>
    <string name="triviaGameStartBtn">START GAME</string>
    <string name="triviaBackHomeBtn">BACK HOME</string>

    <!--    Trivia game ongoing page-->
    <string name="unAnsweredTextBegin">questions for your game.</string>
    <string name="unAnsweredText">unanswered</string>
    <string name="correctCountText">correct</string>
    <string name="wrongCountText">wrong</string>
    <string name="triviaNextBtn">NEXT</string>
    <string name="selectAnsNotice">Please select an answer!</string>
    <string name="triviaStartAgainBtn">START AGAIN</string>

    <!--    Game result page-->
    <string name="scoreTitle">SCORE:</string>
    <string name="masterpiece">Masterpiece!</string>
    <string name="amazing">Amazing!</string>
    <string name="great">Great!</string>
    <string name="good">Good!</string>
    <string name="keepGoing">Keep Going!</string>
    <string name="saveScoreBtn">SAVE SCORE</string>

    <!--    Game result page AlertDialog-->
    <string name="deleteNotice">Do you want to delete this record?</string>
    <string name="triviaSelectRow">The selected row is: </string>
    <string name="showPlayerName">Player Name: </string>
    <string name="showScore">Player score: </string>
    <string name="showQuestionAmount">Player answered: </string>
    <string name="questionText">questions</string>
    <string name="showDifficultyType">Difficulty type: </string>
    <string name="showQuestionType">Question type: </string>
    <string name="yesName">YES</string>
    <string name="noName">NO</string>

    <!--    Game result page pop up window-->
    <string name="playerNameInput">Enter your name here</string>
    <string name="saveNameBtn">SAVE</string>
    <string name="cancelSaveBtn">CANCEL</string>

    <!-- Fragment details page -->
    <string name="triviaHideBtn">HIDE</string>

    <!--    Songster page-->
    <string name="songster_btn_add">Add to Favourite</string>
    <string name="songster_btn_favourite">Go To Favourite</string>
    <string name="songster_search_hint">Input Search Content Here</string>
    <string name="songster_btn_search">Search</string>
    <string name="songster_search">Songster search page</string>
    <string name="faveListTitle">Favourite List</string>
    <string name="backBtn">Go Back</string>
    <string name="add_to_favourite">Add to favourite list</string>
    <string name="yes">Yes</string>
    <string name="add">Successfully Added!</string>
    <string name="no">No</string>

    <string name="title_activity_soccer_games" translatable="false">SoccerGames</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="read">Read</string>
    <string name="save">Save</string>
    <string name="favorite">Favorite</string>
    <string name="soccer_search">Search</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_soccer_news_page">SoccerNewsPage</string>
    <string name="back">BACK</string>
    <string name="remove">REMOVE</string>
    <string name="rating">Rate the SoccerGames APP</string>
    <string name="submitRate">Submit</string>
    <string name="news">Soccer News</string>
    <string name="savedNews">Favorite News</string>
    <string name="soccerActivityTitle">Soccer Games Activity</string>
    <string name="soccerActivityAuthor">Feiqiong Deng</string>
    <string name="soccerActivityVersionNumber">Version Number: 2</string>
    <string name="soccerHelpTile">Soccer Games Help Menu</string>
    <string name="soccerInstructions1">* Click the title to get details</string>
    <string name="soccerInstructions2">* Click read button to load article in a browser</string>
    <string name="soccerInstructions3">* Click save button to save the article</string>
    <string name="soccerInstructions4">* Click heart button to show favorites</string>
    <string name="soccerInstructions5">* Click delete button to remove the story</string>



    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

    <!--    <string name="hello_world">Hello Square World!</string>-->
    <!--    Car Database-->
    <string name="SaveToFavorites">Save to Favorites</string>
    <string name="enterHint">Please enter make/brand</string>
    <string name="searchModel">search model</string>
    <string name="searchDetail">search details</string>
    <string name="goToShop">go to shop</string>
    <string name="favorites">favorites</string>
    <string name="backToPrevious">Back to previous</string>
    <string name="deleteFromFavorites">delete from favorites</string>
    <string name="help">Help</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="detail_make">detail_make</string>
    <string name="detail_model">detail_model</string>
    <string name="addToFavorite">Add to Favorite</string>
    <string name="deleteFromFavorite">Delete from Favorite</string>


    <!--   Songsterr Main Menu    -->
    <string name="songsterActivityTitle">Activity Title: Songster Search</string>
    <string name="songsterActivityAuthor">Author: Xueru Chen</string>
    <string name="songsterActivityVersionNumber">Version number: V1.0</string>
    <string name="songsterHelpTile">All you need to know about Songsterr Search:</string>
    <string name="songsterInstructions1">1) Enter song title or artist name to search(put "+" between word), click search button</string>
    <string name="songsterInstructions2">2) Click song title to show details</string>
    <string name="songsterInstructions3">3) Click song ID or artist ID launch to another website </string>
    <string name="songsterInstructions4">4) Add to favourites list</string>
    <string name="songsterInstructions5">"5) Or Delete "</string>

    <string name="input">Input search content</string>
    <string name="search_button">Search</string>

    <string name="addFavorite">Add to favorites</string>
    <string name="removeFav">Remove Favorite</string>
    <string name="goToFav">Go to Favorite List</string>
    <string name="alertDeleteTitle">Delete this song?</string>
    <string name="deleteSnackbar">The selected song is already deleted.</string>
    <string name="songTitle">Song Title: </string>
    <string name="songID">Song ID: </string>
    <string name="artistName">Artist Name: </string>
    <string name="artistID">Artist ID: </string>
    <string name="songsterr_details">Songsterr Details</string>
    <string name="search">Searching:   </string>
    <string name="goToMain">Go to main page</string>
    <string name="goToTrivia">Go to trivia game page</string>
    <string name="goToSongster">Go to songster page</string>
    <string name="goToCarDatabase">Go to car database page</string>
    <string name="goToSoccerGame">Go to soccer game page</string>
    <string name="alertGotoFav">Go to Favorites List?</string>

    <!--    Menu page-->
    <string name="backHomeIcon">Home</string>
    <string name="triviaMenuName">Trivia Game</string>
    <string name="songsterMenuName">Songster Search</string>
    <string name="carDBMenuName">Car Database</string>
    <string name="soccerMenuName">Soccer Game</string>
    <string name="helpMenuName">Help</string>
    <string name="triviaHelpTile">All you need to know about Trivia Game:</string>
    <string name="triviaInstructions1">1. Enter the number of questions you want to answer, select difficulty type (easy, medium, hard) and question type(multiple choice, true or false or both type mixed).</string>
    <string name="triviaInstructions2">2. 1 score for every easy question, 2 scores for every medium question and 3 scores for every hard question. For example: </string>
    <string name="triviaInstructions3">Answering 5 easy difficulty type question correct you will get 5 scores.</string>
    <string name="triviaInstructions4">Answering 5 medium difficulty type question correct you will get 10 scores.</string>
    <string name="triviaInstructions5">Answering 5 hard difficulty type question correct you will get 15 scores.</string>
    <string name="closeHelpDialog">CLOSE</string>
    <string name="triviaActivityTitle">Activity Title: Trivia API</string>
    <string name="triviaActivityAuthor">Author: Juan Ni</string>
    <string name="triviaActivityVersionNumber">Version Number: V1.0</string>
    <string name="navigationOpen">Open</string>
    <string name="navigationClose">Close</string>





</resources>