<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/naviheaderName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_blue"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:text="@string/songsterActivityTitle" />

    <TextView
        android:id="@+id/naviheaderAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_blue"
        android:textStyle="bold"
        android:text="@string/songsterActivityAuthor" />

    <TextView
        android:id="@+id/naviheaderVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_blue"
        android:textStyle="bold"
        android:text="@string/songsterActivityVersionNumber" />
</LinearLayout>
