<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f4d042">

    <TextView
        android:id="@+id/yourScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_color"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="30dp"
        android:textSize="30dp"
        android:text="@string/scoreTitle" />


    <EditText
        android:id="@+id/inputPlayerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/purple_color"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        android:inputType="textPersonName"
        android:hint="@string/playerNameInput" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="100dp">

        <Button
            android:id="@+id/saveNameBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/bgbtn"
            android:textSize="16dp"
            android:textColor="@color/purple_color"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="@string/saveNameBtn" />

        <Button
            android:id="@+id/cancelSaveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/bgbtn"
            android:textSize="16dp"
            android:textColor="@color/purple_color"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="@string/cancelSaveBtn" />

    </LinearLayout>



</LinearLayout>