<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/soccerball" />

    <TextView
        android:id="@+id/naviheaderName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textColor="@color/green"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/soccerActivityTitle" />

    <TextView
        android:id="@+id/naviheaderAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/green"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/soccerActivityAuthor" />

    <TextView
        android:id="@+id/naviheaderVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/soccerActivityVersionNumber" />


</LinearLayout>
