<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".SoccerGames"
    android:orientation="vertical"
    tools:deviceIds="wear">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </LinearLayout>
    <ListView
        android:id="@+id/theListView"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/soccer_editText">
    </ListView>

    <FrameLayout
        android:id="@+id/fragmentLocation"
        android:layout_below="@id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toEndOf="@+id/theListView" >

    </FrameLayout>

    <EditText
        android:id="@+id/soccer_editText"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/soccer_editText"
android:layout_alignParentRight="true"
        android:layout_height="wrap_content"
        android:text="@string/soccer_search" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/soccer_editText"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="43dp"
        tools:srcCompat="@tools:sample/avatars" />


    <Button
        android:id="@+id/readBtn"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/theListView"
        android:layout_alignBottom="@id/theListView"
        android:layout_height="wrap_content"
        android:text="@string/read" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/readBtn"
        android:layout_alignBottom="@id/theListView"
        android:layout_height="wrap_content"
        android:text="@string/save" />

    <Button
        android:id="@+id/favoriteBtn"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/saveBtn"
        android:layout_alignBottom="@id/theListView"
        android:layout_height="wrap_content"
        android:text="@string/favorite" />



<!--    <FrameLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:padding="@dimen/inner_frame_layout_padding"-->
<!--        app:boxedEdges="all">-->

<!--        <TextView-->
<!--            android:id="@+id/text"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/hello_world" />-->

<!--    </FrameLayout>-->
</RelativeLayout>