<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cardatabase_bg"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"/>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        tools:openDrawer="start">
        <!-- THIS IS WHAT IS VISIBLE ON SCREEN:-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/topfunction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/makeInput"
                    android:hint="Please enter make/brand"
                    android:textSize="18dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"/>
                <Button
                    android:id="@+id/searchmake"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/searchModel"
                    android:textSize="18dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/body"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/topfunction"
                android:orientation="vertical">
                <ProgressBar
                    android:id="@+id/carProgressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <ListView
                    android:id="@+id/model_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </ListView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bottomFunctionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true">

                <Button
                    android:id="@+id/searchdetals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="2dp"
                    android:text="@string/searchDetail"
                    android:textSize="18dp"/>

                <Button
                    android:id="@+id/shop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="2dp"
                    android:layout_weight="1"
                    android:text="@string/goToShop"
                    android:textSize="18dp"/>
                <Button
                    android:id="@+id/favorites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="2dp"
                    android:layout_weight="1"
                    android:text="@string/favorites"
                    android:textSize="18dp"/>


            </LinearLayout>

        </RelativeLayout>

        <!-- THIS IS WHAT IS WHAT POPS OUT FROM THE SIDE:-->
        <com.google.android.material.navigation.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/cardb_navigation_header"
            app:menu="@menu/main_menu"
            android:id="@+id/nav_view"/>

    </androidx.drawerlayout.widget.DrawerLayout>


</RelativeLayout>
